Update Creature Presentation Slideshow.html

--- a/Final Website Applications/Sealife Hub Website/Creature Presentation Slideshow.html
+++ b/Final Website Applications/Sealife Hub Website/Creature Presentation Slideshow.html
@@ -145,22 +145,22 @@
 
     <div class="mySlides">
       <img src="Dolphin Slide 1.jpg" style="width:100%">
-      <div class="caption-box">Creature Name: Dolphins <br> Behaviours: They are intelligent and playful sea mammals that communicate using clicks and whistles.</div>
+      <div class="caption-box">Creature Name: Dolphins <br> Species Type: Orca <br> Behaviours: They are intelligent and playful sea mammals that communicate using clicks and whistles.</div>
     </div>
 
     <div class="mySlides">
       <img src="JellyFish Slide 2.jpg" style="width:100%">
-      <div class="caption-box"> Creature Name: Jellyfish <br> Behaviours: They have existed for millions of years, even before dinosaurs, and are able to glow in the dark during the night hours!</div>
+      <div class="caption-box"> Creature Name: Jellyfish <br> Species Type: Cubozoa class <br> Behaviours: They have existed for millions of years, even before dinosaurs, and are able to glow in the dark during the night hours!</div>
     </div>
 
     <div class="mySlides">
       <img src="Sea Turtle Slide 3.jpeg" style="width:100%">
-      <div class="caption-box">Creature Name: Sea Turtles <br> Behaviours: They are graceful swimmers that migrate thousands of miles between feeding and nesting grounds.</div>
+      <div class="caption-box">Creature Name: Sea Turtles <br> Species Type: Chelonioidea <br> Behaviours: They are graceful swimmers that migrate thousands of miles between feeding and nesting grounds.</div>
     </div>
 
     <div class="mySlides">
       <img src="Sea Horse.jpg" style="width:100%">
-      <div class="caption-box">Creature Name: Sea Horse <br> Behaviours: They are usually found on corals and plants clinging, and they also have camouflage abilities to escape attacks or for hunting other fish.</div>
+      <div class="caption-box">Creature Name: Sea Horse <br> Species Type: Hippocampus <br> Behaviours: They are usually found on corals and plants clinging, and they also have camouflage abilities to escape attacks or for hunting other fish.</div>
     </div>
 
 
@@ -190,3 +190,4 @@
 
 </body>
 </html>
+
