Update Store Main Page.html

--- a/Final Website Applications/Universal Hardware Store Website/Store Main Page.html
+++ b/Final Website Applications/Universal Hardware Store Website/Store Main Page.html
@@ -182,7 +182,10 @@
         <div class="mySlides">
             <img src="Printer Hardware.jpg" alt="Printer">
             <div class="caption-box">
-                <strong>Printers:</strong> Discover various printer types like inkjet, laser, and 3D printers used in home and business environments.
+                <strong>Printers:</strong> Discover various printer types like inkjet, laser, and 3D printers used in home/business environments.
+                <br>
+                <br>
+                <strong>Average Price: £100 - £200</strong>
             </div>
         </div>
 
@@ -190,6 +193,9 @@
             <img src="Projector Hardware.jpg" alt="Projector">
             <div class="caption-box">
                 <strong>Projectors:</strong> Learn how projectors display visual content for presentations, classrooms, and home theaters.
+                <br>
+                <br>
+                <strong>Average Price: £200 - £500</strong>
             </div>
         </div>
 
@@ -197,6 +203,9 @@
             <img src="Speaker Hardware.jpeg" alt="Speakers">
             <div class="caption-box">
                 <strong>Speakers:</strong> Explore the types of speakers used for multimedia, including Bluetooth, surround sound, and studio monitors.
+                <br>
+                <br>
+                <strong>Average Price: £60 - £150</strong>
             </div>
         </div>
 
@@ -204,6 +213,9 @@
             <img src="Webcam Image.jpg" alt="Speakers">
             <div class="caption-box">
                 <strong>Webcam:</strong> Record your personal real life face to other people on online converstaions like work and school meeting groups
+                <br>
+                <br>
+                <strong>Average Price: £40 - £100</strong>
             </div>
         </div>
 
@@ -211,6 +223,9 @@
             <img src="Headphones Image.jpg" alt="Speakers">
             <div class="caption-box">
                 <strong>Headphones:</strong> Enable and listen to multimedia with types of bluetooth or wired headphones that can allow you to expirence special sound features.
+                <br>
+                <br>
+                <strong>Average Price: £200 - £500</strong>
             </div>
         </div>
 
@@ -243,3 +258,4 @@
 
 </body>
 </html>
+
